UCL-583 fixed another cases of bleeding styles

--- a/src/components/Form/Radio/Radio.module.scss
+++ b/src/components/Form/Radio/Radio.module.scss
@@ -146,19 +146,17 @@
   pointer-events: none;
 }
 
-[data-readonlyview="true"] {
-  & .radio-wrapper {
+[data-readonlyview="true"] .radio-wrapper {
+  color: var(--read-only-text-color);
+
+  & span.input {
     color: var(--read-only-text-color);
+    cursor: not-allowed;
 
-    & span.input {
-      color: var(--read-only-text-color);
-      cursor: not-allowed;
-
-      &:before {
-        outline: 1px solid var(--read-only-border-color);
-        outline-offset: -1px;
-        border-radius: 50%;
-      }
+    &:before {
+      outline: 1px solid var(--read-only-border-color);
+      outline-offset: -1px;
+      border-radius: 50%;
     }
   }
 
@@ -168,6 +166,7 @@
 }
 
 input[type="radio"] {
+  //TODO ?
   &[data-readonlyview="true"] {
     & ~ span.input {
       color: var(--read-only-text-color);
