--- a/src/components/Form/Wrapper/Wrapper/Wrapper.module.scss
+++ b/src/components/Form/Wrapper/Wrapper/Wrapper.module.scss
@@ -66,7 +66,7 @@
   }
 }
 
-[data-readonlyview="true"] {
+.wrapper[data-readonlyview="true"] {
   & label {
     color: var(--read-only-text-color);
   }
